--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,9 +4,9 @@ ci:
 
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.8
+    rev: v0.14.0
     hooks:
-      - id: ruff
+      - id: ruff-check
         args: [--fix]
       - id: ruff-format
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -18,7 +18,7 @@ repos:
       - id: check-yaml
       - id: check-added-large-files
   - repo: https://github.com/adamchainz/blacken-docs
-    rev: "1.19.1"  # replace with latest tag on GitHub
+    rev: "1.20.0"  # replace with latest tag on GitHub
     hooks:
     -   id: blacken-docs
         args: [--skip-errors]
