feat: add helpers for model inputs from raw data (#285)
* add helpers for inputs

* add tests for helpers

* add to docs

* add scripts

* use python code blocks

* include images

* feat: add Raw Data Workflow feature to documentation

- Add Raw Data Workflow as prominent feature in README.md and docs/index.md
- Include comprehensive docstring formatting guidelines in AGENTS.md
- Emphasize complete workflow from raw observations to posterior distributions
- Link to examples/raw-data-workflow page with 5 real-world case studies

* chore: add AGENTS.md to gitignore

- Keep AGENTS.md as local development guidelines file
- File contains docstring formatting rules and sync requirements
- Not tracked in version control per project preference

* chore: stop tracking AGENTS.md

- Remove AGENTS.md from git tracking while keeping local file
- File contains valuable development guidelines but should remain local
- Already added to .gitignore in previous commit

* docs: update feedback response with current API status

* chore: stop tracking prompts/ directory

- Remove prompts/feedback.md from git tracking
- Add prompts/ directory to gitignore
- Keep files local for development reference

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,40 +41,41 @@ nav:
   - Overview: index.md
   - Distribution Explorer: explorer.md
   - Modules:
-    - Models: models.md
-    - Distributions: distributions.md
-    - Mixins: mixins.md
+      - Models: models.md
+      - Distributions: distributions.md
+      - Helpers: helpers.md
+      - Mixins: mixins.md
   - Examples:
-    - Case Studies:
-      - Binomial Model: examples/binomial.md
-      - Bayesian Update: examples/bayesian-update.md
-      - Thompson Sampling: examples/thompson.md
-      - Multi-armed Bandit: examples/bandit.md
-      - Shortest Path: examples/shortest-path-itt.md
-      - Linear Regression: examples/linear-regression.md
-      - Unsupported Distributions: examples/unsupported-distributions.md
-      - Inference in SQL: examples/sql.md
-      - Bootstrap Comparison: examples/bootstrap.md
-      - Limit Estimation: examples/limit.md
-      - Available Rental Cars: examples/wiki-rental-car.md
-    - Features:
-      - Plotting: examples/plotting.md
-      - SciPy Distributions: examples/scipy-connection.md
-      - Sampling Distributions: examples/sampling-distributions.md
-      - Vectorized Operations: examples/vectorized-inputs.md
-      - Indexing: examples/indexing.md
-      - Generalized Numerical Inputs: examples/generalized-inputs.md
-      - Scaling Distributions: examples/scaling-distributions.md
+      - Case Studies:
+          - Binomial Model: examples/binomial.md
+          - Raw Data Workflow: examples/raw-data-workflow.md
+          - Bayesian Update: examples/bayesian-update.md
+          - Thompson Sampling: examples/thompson.md
+          - Multi-armed Bandit: examples/bandit.md
+          - Shortest Path: examples/shortest-path-itt.md
+          - Linear Regression: examples/linear-regression.md
+          - Unsupported Distributions: examples/unsupported-distributions.md
+          - Inference in SQL: examples/sql.md
+          - Bootstrap Comparison: examples/bootstrap.md
+          - Limit Estimation: examples/limit.md
+          - Available Rental Cars: examples/wiki-rental-car.md
+      - Features:
+          - Plotting: examples/plotting.md
+          - SciPy Distributions: examples/scipy-connection.md
+          - Sampling Distributions: examples/sampling-distributions.md
+          - Vectorized Operations: examples/vectorized-inputs.md
+          - Indexing: examples/indexing.md
+          - Generalized Numerical Inputs: examples/generalized-inputs.md
+          - Scaling Distributions: examples/scaling-distributions.md
 
 plugins:
-- search
-- marimo
-- mkdocstrings:
-    handlers:
-      python:
-        options:
-          docstring_style: google
-
+  - search
+  - marimo
+  - mkdocstrings:
+      handlers:
+        python:
+          options:
+            docstring_style: google
 
 markdown_extensions:
   - admonition
