--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dev = [
     "pandas",
     "pypika>=0.48.9,<0.49",
     "pymc>=5.5.0,<6",
+    "micropip==0.9.0",
     "ipython==8.10.0",
     "scikit-learn>=1.3.2,<2",
     "tox>=4.11.4,<5",
